# qemu-retro-directx

./: CMakeLists.txt  README.md  spec2def.py
CompatibilityLib/: CMakeLists.txt
CompatibilityLib/inc/: CompatibilityLib.h
CompatibilityLib/src/: compat.c
d3d9/: CMakeLists.txt
d3d9/src/: d3d9.def  d3d9_private.h  directx.c
general/: config.h  d3dukmdt.h  debug.c  vkd3d.h  vkd3d_shader.h  vkd3d_types.h
general/wine/: debug.h  vulkan_driver.h
wined3d/: CMakeLists.txt
wined3d/src/: adapter_gl.c  adapter_vk.c  cs.c  directx.c  swapchain.c  texture.c  utils.c  wined3d.def  wined3d_main.c  wined3d_private.h
